# pdfEngineeringRedline

./: .gitignore  pdfredline.spec  pyproject.toml  requirements-dev.txt  requirements.txt  spec.MD  system_spec.MD  user_interface.MD
.github/workflows/: build.yml
scripts/: build.py
src/pdfredline/: __main__.py  app.py  logging_setup.py  main.py  ribbon.py
src/pdfredline/annotations/: base.py  dimensions.py  registry.py  shapes.py  snap.py  symbols.py  text.py
src/pdfredline/canvas/: pdf_renderer.py  scene.py  view.py
src/pdfredline/commands/: undo.py
src/pdfredline/io/: pdf_export.py  print_handler.py  project.py
src/pdfredline/panels/: properties.py  symbol_browser.py
src/pdfredline/symbols/: library.py
src/pdfredline/symbols/gdt/: position.json
src/pdfredline/symbols/surface/: surface_finish.json
src/pdfredline/symbols/welding/: fillet_weld.json
src/pdfredline/tools/: base.py  dimension_tool.py  select_tool.py  shape_tools.py  symbol_tool.py  text_tool.py  tool_manager.py
tests/: conftest.py  create_test_pdf.py  test_clipboard.py  test_dimensions.py  test_logging.py  test_pdf_export.py  test_pdf_renderer.py  test_project.py  test_shapes.py  test_smoke.py  test_snap.py  test_symbols.py  test_text.py  test_undo.py
